# sniff-cookies

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile  Makefile.am  README.md  autogen.sh  configure  configure.ac  mypcap.c  mypcap.h  packagecore.yaml  sniff_cookies.c  sniff_cookies_lib.c  sniff_cookies_lib.h
.github/: dependabot.yml
.github/workflows/: test.yml
include/: libmypcap.h  libsniffcookies.h  mypcap.h  sniff_cookies_lib.h
lib/: Makefile.am  libmypcap.c  libsniffcookies.c  mypcap.c  sniff_cookies_lib.c
src/: Makefile.am  sniff_cookies.c
